145		C++			Simplified dependencies.
146		C++			Province numbers and names come from V2 install.
147		C++			Cleaned up the output a bit.
148		C++			Fixed Capitals problem from change 146.
149		C++			Added logging during country mapping.
150		C++			RGO type from V2 install.
151		C++			Liferatings from V2 install.
152		C++			Removed unnecessary files from build.
153		C++			Get province names the right way.
154		C++			Changleog now included in build.
155		C++			Cleaned up old province name code.
156		C++			Cores!
157		C++			RGO and pops start with money.
158		C++			Landless but cored nations now convert (until we run out of tags).
159		C++			If a landless nations' culture is gone from its cores, the nation is removed.
160		C++			Removed all that logging about the state creation process.
161		C++			Blocked nations list.
162		C++			Cultural union nations.
163		C++			Removed some unneeded files.
164		C++			unions.txt now copied into build folder.
165		C++			Flushing log output in case of disaster.
166		C++			Fixed another parser bug.
167		C++			Added all V2 cultural unions.
168		C++			More landless nations removed.
169		C++			All nations formed by decision now blocked during conversion.
170		C++			Landless nations no longer considered in tech conversion.
171		C++			Daimyos get merged into Japan.
172		C++			Governments convert.
173					?
174		N/A			Technical description of the description.
175		C++			Added the miscmod files.
176		N/A			Updated the SRS document.
177		C++			Timestamp log messages
178		C++			Map Mossurize for HTTT as we do for DW
179		C++			Don't crash on countries that have no history leaf
180		C++			Minor changes to iterator and stream use for vc9
181		C++			Fix parser handling of # in string literals
182		C++			Refactor date handling
183		C++			Convert international relations and military access
184		C++			Convert diplomatic agreements
185		C++			A little refactoring
186		C++			Update project files and changelog