@@ -168,7 +168,7 @@ Revision	Version Updated		Log Message
 151		C++			Liferatings from V2 install.
 152		C++			Removed unnecessary files from build.
 153		C++			Get province names the right way.
-154		C++			Changleog now included in build.
+154		C++			Changelog now included in build.
 155		C++			Cleaned up old province name code.
 156		C++			Cores!
 157		C++			RGO and pops start with money.
@@ -201,3 +201,5 @@ Revision	Version Updated		Log Message
 184		C++			Convert diplomatic agreements
 185		C++			A little refactoring
 186		C++			Update project files and changelog
+187		C++			Altered DW province mappings so the owner of Antwerpen gets a coastal province
+188		C++			Cleaned up diplomatic error messages
